[gd_scene load_steps=4 format=3 uid="uid://bd6fitnir8evx"]

[ext_resource type="Script" uid="uid://0woxrh7lirv2" path="res://scripts/cartas/cardmanager.gd" id="1_vtglq"]
[ext_resource type="PackedScene" uid="uid://btunrnpmsmvby" path="res://cenas/cartas/carta.tscn" id="2_vtglq"]
[ext_resource type="PackedScene" uid="uid://cdtcsog7vcadd" path="res://cenas/cartas/carta_1.tscn" id="3_7nenf"]

[node name="cardManager" type="Node2D"]
script = ExtResource("1_vtglq")

[node name="carta" parent="." instance=ExtResource("2_vtglq")]
position = Vector2(450, 94)

[node name="carta1" parent="." instance=ExtResource("3_7nenf")]
position = Vector2(360, 195)
